--- a/templates/hi.html
+++ b/templates/hi.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <h1 class="text">student registration</h1>
+    <h1 class="text-center">student registration</h1>
     <div class="container mt-5">
         <div class="row">
-            <div class="col-4">
+            <div class="col-lg-4">
                 <div class="card">
                     <div class="card-body">
                       <h5 class="card-title text-center">student registration</h5>
